Services sections adding

--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
+    <!--ABOUT SECTION END-->
+
+    <section class="services" id="services">
+        <h2 class="heading">My <span>Services</span></h2>
+        <div class="services-container">
+
+            <div class="services-box">
+                <i class="fa-solid fa-code"></i>
+                <h3>Web Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis reiciendis, perspiciatis cupiditate eos nemo tenetur exercitationem libero, omnis aliquam modi magni ipsa culpa corrupti, quisquam consequatur vel dolorem doloremque temporibus beatae corporis? Minus tempora, maxime inventore amet dolorem ullam nisi cumque corporis beatae eveniet porro. Dicta sed autem voluptates?</p>
+                <a href="#about" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class="fa-solid fa-palette"></i>
+                <h3>UI/UX Designing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis reiciendis, perspiciatis cupiditate eos nemo tenetur exercitationem libero, omnis aliquam modi magni ipsa culpa corrupti, quisquam consequatur vel dolorem doloremque temporibus beatae corporis? Minus tempora, maxime inventore amet dolorem ullam nisi cumque corporis beatae eveniet porro. Dicta sed autem voluptates?</p>
+                <a href="#about" class="btn">Read More</a>
+            </div>
+
+            <!-- <div class="services-box">
+                <i class="fa-brands fa-apple"></i>
+                <h3>App Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis reiciendis, perspiciatis cupiditate eos nemo tenetur exercitationem libero, omnis aliquam modi magni ipsa culpa corrupti, quisquam consequatur vel dolorem doloremque temporibus beatae corporis? Minus tempora, maxime inventore amet dolorem ullam nisi cumque corporis beatae eveniet porro. Dicta sed autem voluptates?</p>
+                <a href="#about" class="btn">Read More</a>
+            </div> -->
+            
+        </div>
+    </section>
+    <!--SERVICES SECTION START-->
+
+    <!--SERVICES SECTION END-->
+
     
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/8678138c9c.js" crossorigin="anonymous"></script>
